--- a/src/main/resources/templates/design.html
+++ b/src/main/resources/templates/design.html
@@ -6,7 +6,13 @@
     <body>
         <h1>Design your taco!</h1>
         <img th:src="@{img.jpg}"/>
-        <form method="POST" th:object="${design}">
+
+        <form method="POST" th:action="@{/logout}" id="logoutForm">
+            <input type="submit" value="Logout"/>
+        </form>
+
+
+        <form th:method="POST"  th:action="@{/design}" th:object="${design}">
             <div class="grid">
                 <div class="ingredient-group" id="wraps">
                     <h3>Designate your wrap:</h3>
