--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,5 +7,7 @@ xmlns:th="http://www.thymeleaf.org">
 <body>
     <h1>Welcome to...</h1>
 <img th:src="@{/img.jpg}"/>
+<br/>
+<a th:href="@{/login}">Login</a>
 </body>
 </html>
