--- a/src/main/resources/templates/orderForm.html
+++ b/src/main/resources/templates/orderForm.html
@@ -5,7 +5,7 @@
         <title>Taco Cloud</title>
     </head>
     <body>
-        <form method="POST" th:action="@{/orders}" th:object="${order}">
+        <form th:method="POST" th:action="@{/orders}" th:object="${order}">
             <h1>Order your taco creations!</h1>
             <img th:src="@{/img.jpg}"/>
             <a th:href="@{/design}" id="another">Design another taco</a><br/>
